After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 654422 - Nautilus doesn't display folders history in 'go... menu'
Nautilus doesn't display folders history in 'go... menu'
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: [obsolete] Sidebar Panel: History
3.1.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-07-11 21:40 UTC by sam_
Modified: 2011-07-21 19:51 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description sam_ 2011-07-11 21:40:19 UTC
Open Nautilus -> go..., the clear history entry is empty, even if there were recently files/folders opened.
Expected to view recently opened folders in order to faster review or to clear history.
In case the function is obsolete due to zeitgeist integration, remove the function.

Reported there first.
https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/809034
Comment 1 Cosimo Cecchi 2011-07-21 19:51:33 UTC
Zeitgeist integration has nothing to do with this (we don't currently have any kind of integration with ZG anyway).
That menu entry was useful in the past, as browsing history was remembered globally outside the current window, and Nautilus was persistent in the session. Now that this is not true anymore, the menu item can indeed be removed.

I now pushed a patch to git master that removes it, thanks for the report.