window: remove 'Clear History' from the 'Go' menu

This is a leftover from the past, when we used to have a global history
list. Now that Nautilus is not persistent and we don't have that
anymore, it doesn't really make sense to keep this menu item.

https://bugzilla.gnome.org/show_bug.cgi?id=654422